# api/user_api.go
@@ -1,11 +1,10 @@
 package api
 
 import (
-	"net/http"
+	"order-food-service/pkg/error_code"
 	"order-food-service/pkg/response"
 	"order-food-service/pkg/utils"
 	"order-food-service/service"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -13,27 +12,27 @@ import (
 type UserApi struct{}
 
 // @Tags User
-// @Name GetUserInfo
-// @Summary 用户名密码登陆
-// @Param Authorization header string true "Authorization" "Token"
+// @Name getUserInfo
+// @Summary 查询登录用户信息
+// @Param Authorization header string true "Authorization"
 // @Success 200 {object} response.Result{data=dto.UserRes} "成功返回"
-// @Failure 401 {object} response.Result "token无效"
 // @Accept json
 // @Produce json
-// @Router /login [post]
+// @Router /userInfo [GET]
 func (u *UserApi) GetUserInfo(c *gin.Context) {
 	tokenInfo, _ := c.Get("claims")
-	if tokenInfo != nil {
-		response.Resp().SetCode(strconv.Itoa(http.StatusUnauthorized)).Fail(c, "token 失效")
+	errText := error_code.Text(error_code.StatusUnauthorized)
+	if tokenInfo == nil {
+		response.Resp().SetCode(error_code.StatusUnauthorized).Fail(c, errText)
 	}
 	userInfo, err := tokenInfo.(*utils.CustomClaims)
 	if !err {
-		response.Resp().SetCode(strconv.Itoa(http.StatusUnauthorized)).Fail(c, "token 失效")
+		response.Resp().SetCode(error_code.StatusUnauthorized).Fail(c, errText)
 	}
 	userService := service.UserService{}
 	userRes, userErr := userService.GetUserNamePassword(userInfo.UserName, userInfo.Password)
 	if userErr != nil {
-		response.Resp().SetCode(strconv.Itoa(http.StatusUnauthorized)).Fail(c, "token 失效")
+		response.Resp().SetCode(userErr.Error()).Fail(c, errText)
 	}
 	response.Success(c, userRes)
 }
